@@ -1,6 +1,7 @@
 2001-12-18  Bradford Hovinen  <hovinen@ximian.com>
 
 	* preferences.c: Update GConf keys to use /desktop/gnome/background
+	(preferences_load): Use gconf_client rather than gconf_engine
 
 2001-12-17  Bradford Hovinen  <hovinen@ximian.com>
 
